src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>product_formalization_indicator__c</fullName>
        <formula>PricebookEntry.Product2.formalization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>product_formalization_indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_pdf_indicator__c</fullName>
        <formula>PricebookEntry.Product2.pdf__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>product_pdf_indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_price_approval_indicator__c</fullName>
        <formula>PricebookEntry.Product2.price_penalty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>product_price_approval_indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>product_price_approval_method__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Type_of_quote__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>product_price_approval_method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_risk_approval_indicator__c</fullName>
        <formula>PricebookEntry.Product2.risk_sanction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>product_risk_approval_indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cancellation_fee_per__c</fullName>
        <label>Cancellation fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>minimun_apr_per__c</fullName>
        <label>Minimun APR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>minimun_fee_per__c</fullName>
        <label>Minimun fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>price_quote_date__c</fullName>
        <label>Last price quote date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>price_quote_id__c</fullName>
        <label>Cotiza Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>proposed_apr_per__c</fullName>
        <label>Proposed APR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>proposed_fee_per__c</fullName>
        <label>Proposed fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>restructuring_fee_per__c</fullName>
        <label>Restructuring fee (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>spread_per__c</fullName>
        <label>Spread (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>suggested_apr_per__c</fullName>
        <label>Suggested APR (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>price_quote_availability_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is price quote available checked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>price_quote_available__c</fullName>
        <formula>AND( price_quote_availability_check__c ,NOT(ISBLANK( pricing_model_id__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is price quote available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>price_rates_calculation_Id__c</fullName>
        <label>Price rates calculation Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pricing_model_id__c</fullName>
        <label>Pricing model</label>
        <length>10</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>price_operation_id__c</fullName>
        <label>Price operation Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_quote_owner_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price quote owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>price_availability_check_error__c</fullName>
        <label>Price availability error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_quote_status_id__c</fullName>
        <label>Price quote status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additional_apread_per__c</fullName>
        <label>Additional spread (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>additional_capital_per__c</fullName>
        <label>Additional capital (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>capital_amount__c</fullName>
        <label>Capital amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>capital_currency_id__c</fullName>
        <label>Capital currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>efficiency_cost__c</fullName>
        <label>Efficiency cost (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>expected_loss_per__c</fullName>
        <label>Expected loss (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>financing_cost_stockholder_per__c</fullName>
        <label>Financing cost stockholder (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>funding_cost_adjusted_per__c</fullName>
        <label>Funding cost adjusted (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>funding_cost_per__c</fullName>
        <label>Funding cost (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>minimum_spread_per__c</fullName>
        <label>Minimum spread (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>regulatory_capital_per__c</fullName>
        <label>Regulatory capital (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
	<fields>
        <fullName>gipr_Operativa__c</fullName>
        <label>Operativa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>gipr_Currency_Origin__c</fullName>
        <label>Moneda Origen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>gipr_Currency_Destiny__c</fullName>
        <label>Moneda Destino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	 <fields>
        <fullName>cpliq_Cuenta_Abono__c</fullName>
        <label>Cuenta Abono</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpliq_Cuenta_Cargo__c</fullName>
        <label>Cuenta cargo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	 <fields>
        <fullName>cpliq_Rof__c</fullName>
        <label>ROF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>ContractNo_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK( gipr_Contract_Number__c ),
REGEX( gipr_Contract_Number__c , &quot;[0-9]{4}-[0-9]{4}-[0-9]{10}&quot;)
) 
)</errorConditionFormula>
        <errorMessage>Contract No format not valid, correct: 0000-0000-000000000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LinkedAccount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK( cpliq_Cuenta_vinculada__c ),
REGEX( cpliq_Cuenta_vinculada__c , &quot;[0-9]{4}-[0-9]{4}-[0-9]{10}&quot;)
)
)</errorConditionFormula>
        <errorMessage>Linked Account format not valid, correct: 0000-0000-000000000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NOperation_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK(da_nOperation__c),
REGEX(da_nOperation__c, &quot;[0-9]{4}-[0-9]{4}-[0-9]{10}&quot;)
) 
)</errorConditionFormula>
        <errorMessage>Operation No format not valid, correct: 0000-0000-000000000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_ValidationRule</fullName>
        <active>true</active>
        <description>Verify the positive a</description>
        <errorConditionFormula>NOT(OR( 
ISBLANK( gipr_Quantity__c ), 
REGEX(TEXT(gipr_Quantity__c), &quot;[0-9]+&quot;) 
) 
)</errorConditionFormula>
        <errorMessage>The quantity must be positive and can not include decimals.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidDueDate</fullName>
        <active>true</active>
        <errorConditionFormula>cpliq_Fecha_Vencimiento__c &lt;=Today()</errorConditionFormula>
        <errorMessage>Due Date must be major than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidTerm</fullName>
        <active>true</active>
        <errorConditionFormula>IF(cpliq_n__c&lt;0 ,true,If( cpliq_n_gracia__c&lt;0 &amp;&amp;  IsPickVal(cpliq_Tipo_amortizacion__c,&apos;02&apos;),true,if( gipr_Plazo__c &lt;0,true,false)))</errorConditionFormula>
        <errorMessage>Please define a valid term, should be major than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Email</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK( da_Client_Email__c ),
REGEX( da_Client_Email__c , &quot;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&quot;)
) 
)</errorConditionFormula>
        <errorDisplayField>da_Client_Email__c</errorDisplayField>
        <errorMessage>Invalid e-mail, please enter a valid e-mail</errorMessage>
    </validationRules>
<validationRules>
        <fullName>Validation_Term_Integer</fullName>
        <active>true</active>
        <errorConditionFormula>If( Product2.ProductCode &lt;&gt; $Label.lblPDFProductPrestamoLP &amp;&amp; Product2.ProductCode &lt;&gt; $Label.lblPDFProductLeasing ,
OR( 
NOT(OR( 
ISBLANK( gipr_Plazo__c ), 
REGEX(TEXT(gipr_Plazo__c), &quot;[1-9][0-9]{0,2}&quot;)
)),
NOT(OR( 
ISBLANK( cpliq_n__c ), 
REGEX(TEXT(cpliq_n__c), &quot;[1-9][0-9]{0,2}&quot;)
)),
NOT(OR( 
ISBLANK( cpliq_n_gracia__c ), 
REGEX(TEXT(cpliq_n_gracia__c), &quot;[0-9][0-9]{0,2}&quot;)
)
)
),False)</errorConditionFormula>
        <errorMessage>Invalid Term value, the value ca not have decimals and need to be less than 1000</errorMessage>
    </validationRules>
</CustomObject>